db gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -271,6 +271,8 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+analytics.db
+analytics_log.ini
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
