✨ sql 조회한 파일 다운로드 기능 추가

--- a/.gitignore
+++ b/.gitignore
@@ -273,6 +273,7 @@ cython_debug/
 
 analytics.db
 analytics_log.ini
+sql_result.csv
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
